Update and rename 2020-12-02-하만카돈-사이테이션-300-6개월-후기.md to 2021-04-02-하만카돈-사이테이션-300-9개월-후기.md

--- a/_posts/2021-04-02-하만카돈-사이테이션-300-9개월-후기.md
+++ b/_posts/2021-04-02-하만카돈-사이테이션-300-9개월-후기.md
@@ -53,7 +53,7 @@ tags:
 
 3. 가까이서 듣는 것 뿐 아니라 높이도 얼굴 높이로 맞추는 것은 필수 입니다. 
 
-| ![img]({{"/assets/images/300-9.jpg"| relative_url}}) | 
+| ![img](/assets/images/300-9.jpg) | 
 |:--:| 
 | 사이테이션 류 광고를 보면 거실에 거치해 놓고 듣는 걸로 해 놨는데 이거 아닙니다 |  
 
